@startuml

AWAITING_DATA:
NEED_DATA:
DATA_AVAILABLE:
ERROR:
EOF:

[*] --> AWAITING_DATA

AWAITING_DATA --> DATA_AVAILABLE : ReadListener
NEED_DATA -->DATA_AVAILABLE : ReadListener

DATA_AVAILABLE --> AWAITING_DATA : produceContent()
AWAITING_DATA --> NEED_DATA : needContent()

DATA_AVAILABLE --> EOF : produceContent()
DATA_AVAILABLE --> ERROR : produceContent()

@enduml
